--- a/TDC/ayudantias/01_logica/03/ayudantia_logica_03_solucion.tex
+++ b/TDC/ayudantias/01_logica/03/ayudantia_logica_03_solucion.tex
@@ -250,11 +250,11 @@ Ahora debemos transformar estas expresiones a forma normal de Skolem:
         (skolemización, $a$ es una constante)}
 \end{itemize}
 
-Para concluir, se debe aplicar la regla de resolución sobre el conjunto de cláusulas encontrado:
+Para concluir, se debe aplicar la regla de resolución sobre el conjunto de cláusulas encontrado, unificando cuando corresponda:
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=.9\textwidth]{resolucion_lpo_02.pdf}
+  \includegraphics[width=1.\textwidth]{resolucion_lpo_02.pdf}
 \end{figure}
 
 
